--- a/.env.local
+++ b/.env.local
@@ -8,11 +8,12 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sentry_db
 DB_PORT=3306
-DB_DATABASE=base_laravel_docker
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sentry
+DB_USERNAME=sentry-user
+DB_PASSWORD=secret
+DB_SCHEMA=public
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
