--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
 version: '3'
 services:
-    base_php:
-        container_name: base-php
+    sentry_php:
+        container_name: sentry-php
         build:
             context: .
             dockerfile: Dockerfile
         volumes:
             - .:/var/www/html
         networks:
-            - base
+            - sentry
         depends_on:
-            - base_db
+            - sentry_db
 
-    base_nginx:
-      container_name: base-nginx
+    sentry_nginx:
+      container_name: sentry-nginx
       hostname: nginx
       image: nginx:1.19
       restart: unless-stopped
       depends_on:
-        - base_php
+        - sentry_php
       ports:
         - '${APP_PORT:-80}:80'
       volumes:
         - .:/var/www/html
         - ./docker/virtualhost.conf:/etc/nginx/conf.d/default.conf
       networks:
-        - base
+        - sentry
 
-    base_db:
-        container_name: base-db
+    sentry_db:
+        container_name: sentry-db
         image: 'mariadb:10.5.8'
         restart: always
         ports:
@@ -39,12 +39,12 @@ services:
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
         volumes:
-            - 'basemysql:/var/lib/mysql'
+            - 'sentrymysql:/var/lib/mysql'
         networks:
-            - base
+            - sentry
 networks:
-    base:
+    sentry:
         driver: bridge
 volumes:
-    basemysql:
+    sentrymysql:
         driver: local
