--- a/docker/virtualhost.conf
+++ b/docker/virtualhost.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location ~ ^/.+\.php(/|$) {
-        fastcgi_pass base_php:9000;
+        fastcgi_pass sentry_php:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
