--- a/docker/virtualhost.conf
+++ b/docker/virtualhost.conf
@@ -4,12 +4,14 @@ server {
     index index.php index.html index.htm;
     root /var/www/html/public;
 
+    server_name minio.local;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ ^/.+\.php(/|$) {
-        fastcgi_pass sentry_php:9000;
+        fastcgi_pass minio_php:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
