--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       restart: unless-stopped
       depends_on:
         - minio_php
+        - minio_storage
       ports:
         - '80:80'
       volumes:
@@ -40,6 +41,7 @@ services:
       image: minio/minio
       command: server /data --console-address ":9001"
       ports:
+        - "9000:9000"
         - "9001:9001"
       environment:
         MINIO_ROOT_USER: minio
