--- a/docker/virtualhost.conf
+++ b/docker/virtualhost.conf
@@ -4,7 +4,7 @@ server {
     index index.php index.html index.htm;
     root /var/www/html/public;
 
-    server_name minio.local;
+    #server_name minio.local;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
