--- a/.env.local
+++ b/.env.local
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://minio.local
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -36,10 +36,13 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=Wu4tbf5gH8aQzKn7
+AWS_SECRET_ACCESS_KEY=kiI37js7hEWIy9MyYXt0HujZApkXz0tq
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_BUCKET=mibucket
+AWS_ENDPOINT=http://minio-storage:9000
+AWS_URL=${APP_URL}:9000/${AWS_BUCKET}/
+AWS_USE_PATH_STYLE_ENDPOINT=true
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
