--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "bensampo/laravel-enum": "^3.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "realrashid/sweet-alert": "^3.2",
         "sentry/sentry-laravel": "^2.3",
         "silber/bouncer": "v1.0.0-rc.10"
