--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,53 @@
 version: '3'
 services:
-    sentry_php:
-        container_name: sentry-php
-        build:
-            context: .
-            dockerfile: Dockerfile
-        volumes:
-            - .:/var/www/html
-        networks:
-            - sentry
-        depends_on:
-            - sentry_db
+  minio_php:
+    container_name: minio-php
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/var/www/html
 
-    sentry_nginx:
-      container_name: sentry-nginx
-      hostname: nginx
-      image: nginx:1.19
-      restart: unless-stopped
-      depends_on:
-        - sentry_php
-      ports:
-        - '${APP_PORT:-80}:80'
-      volumes:
-        - .:/var/www/html
-        - ./docker/virtualhost.conf:/etc/nginx/conf.d/default.conf
-      networks:
-        - sentry
+  minio_nginx:
+    container_name: minio-nginx
+    hostname: nginx
+    image: nginx:1.19
+    restart: unless-stopped
+    depends_on:
+      - minio_php
+    ports:
+      - '80:80'
+    volumes:
+      - .:/var/www/html
+      - ./docker/virtualhost.conf:/etc/nginx/conf.d/default.conf
 
-    sentry_db:
-        container_name: sentry-db
-        image: 'mariadb:10.5.8'
-        restart: always
-        ports:
-            - 3306:3306
-        environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-        volumes:
-            - 'sentrymysql:/var/lib/mysql'
-        networks:
-            - sentry
-networks:
-    sentry:
-        driver: bridge
+  minio_db:
+    container_name: minio-db
+    image: postgres:14
+    restart: always
+    environment:
+      POSTGRES_DB: minio
+      POSTGRES_USER: minio-user
+      POSTGRES_PASSWORD: secret
+      PGPASSWORD: secret
+    volumes:
+      - dbminio:/var/lib/postgresql/data
+    ports:
+      - "54321:5432"
+
+  minio_storage:
+    container_name: minio-storage
+    image: minio/minio
+    ports: 
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=12345678
+    volumes:
+      - minio-data:/data
+    command: server /data --console-address ":9001"
+
 volumes:
-    sentrymysql:
-        driver: local
+  dbminio:
+  minio-data:
