--- a/.env.local
+++ b/.env.local
@@ -36,11 +36,17 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
+#AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_BUCKET=my-bucket
+AWS_ENDPOINT=minio-storage:9000
+AWS_URL=${APP_URL}:9000/${AWS_BUCKETe}/
+AWS_USE_PATH_STYLE_ENDPOINT=true
 
+#FILESYSTEM
+FILESYSTEM_DRIVER=s3
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
